<resources>
    <string name="app_name">GIF Searcher</string>

    <string name="top">Trending</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="error">LOADING ERROR</string>

    <!--    MESSAGES-->
    <string name="error_message_1">Failed to load image list</string>
    <string name="error_message_2">Failed to load image</string>
    <string name="error_message_3">Failed to load category list</string>

    <!--    BUTTONS-->
    <string name="button_try_again">Try Again</string>
    <string name="fab_share">Share</string>
    <string name="fab_search">Search GIF</string>
    <string name="fab_download">Download</string>
    <string name="fab_favorites">Add to favorites</string>
    <string name="button_search">SEARCH</string>

    <string name="search_hint">Enter a word</string>
    <string name="delete_description">Clear</string>

    <!--    ITEMS MENU-->
    <string name="item_menu_collapse_subcategories">Collapse subcategories</string>
    <string name="item_menu_show_favorites">Show Favorites</string>
    <string name="item_menu_change_view">View</string>
    <string name="item_menu_search">Search</string>
    <string name="item_menu_theme">Theme</string>
    <string name="item_menu_light">Light</string>
    <string name="item_menu_dark">Dark</string>
    <string name="item_menu_auto">Auto</string>

    <string name="progress_start_text">0%</string>
    <string name="progress_percent">%d%%</string>

    <string name="success_save_file">GIF файл сохранен в папку Download</string>
    <string name="cant_save_file">Ошибка при сохранении GIF файла</string>
</resources>