<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:orderInCategory="20"
        android:title="@string/item_menu_show_favorites"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_theme_day_night"
        android:orderInCategory="30"
        android:title="@string/item_menu_theme"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/theme_light"
                    android:title="@string/item_menu_light"
                    app:showAsAction="ifRoom|withText" />
                <item
                    android:id="@+id/theme_dark"
                    android:title="@string/item_menu_dark"
                    app:showAsAction="always|withText" />
                <item
                    android:id="@+id/theme_auto"
                    android:title="@string/item_menu_auto"
                    app:showAsAction="always|withText" />
            </group>
        </menu>
    </item>
</menu>