<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_change_layout"
        android:orderInCategory="2"
        android:title="@string/item_menu_change_view"
        app:showAsAction="ifRoom"
        tools:icon="@drawable/ic_baseline_dashboard_24" />
    <item
        android:id="@+id/action_theme_day_night"
        android:orderInCategory="3"
        android:title="@string/item_menu_theme"
        app:showAsAction="collapseActionView"
        tools:icon="@drawable/ic_baseline_dashboard_24">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/theme_light"
                    android:title="@string/item_menu_light"
                    app:showAsAction="ifRoom|withText" />
                <item
                    android:id="@+id/theme_dark"
                    android:title="@string/item_menu_dark"
                    app:showAsAction="always|withText" />
                <item
                    android:id="@+id/theme_auto"
                    android:title="@string/item_menu_auto"
                    app:showAsAction="always|withText" />
            </group>
        </menu>
    </item>
</menu>